# gis-lab-telcom

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  mvp_gis_lab.py  pyproject.toml
.github/workflows/: ci.yml
docs/: telecom_availability_mvp_instructions.md
tests/: test_mvp_gis_lab.py
web/: index.html
web/data/nyc/: points_all.json  points_overlap.json  polygons.json
web/data/rio/: points_all.json  points_available.json  points_overlap.json  polygons.json
